--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "omniva",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Wrapper for Omniva XML API",
   "main": "dist/index.js",
   "repository": "git@github.com:Petka17/omniva.git",
   "author": "Petr Klimenko <petrklim@gmail.com>",
   "license": "MIT",
   "private": false,
-  "files": ["dist", "package.json", "yarn.lock"],
+  "files": [
+    "dist",
+    "package.json",
+    "yarn.lock"
+  ],
   "scripts": {
     "build": "tsc",
     "whoami": "npm whoami"
